# blackholecpp

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
glwidget/: glbasicwidget.cpp  glbasicwidget.h  glcirclewidget.cpp  glcirclewidget.h  glmultipasswidget.cpp  glmultipasswidget.h
shaders/: basic.frag  basic.vert  circle.frag  circle.vert  horizontal.frag  mipmap.frag  multipass.vert  multipass_circle.frag  multipass_composite.frag  screen.frag  screen.vert  screen_result.frag  vertical.frag
tabs/: basiccontrolpanel.cpp  basiccontrolpanel.h  controlpanel.cpp  controlpanel.h  multipasscontrolpanel.cpp  multipasscontrolpanel.h
